@@ -1,22 +1,22 @@
 /*
- * Copyright 2015-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.parser;
 
-import static com.facebook.buck.parser.ParserConfig.DEFAULT_BUILD_FILE_NAME;
+import static com.facebook.buck.parser.config.ParserConfig.DEFAULT_BUILD_FILE_NAME;
 import static com.google.common.base.Charsets.UTF_8;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -45,22 +45,29 @@ import com.facebook.buck.core.cell.Cell;
 import com.facebook.buck.core.cell.TestCellBuilder;
 import com.facebook.buck.core.config.BuckConfig;
 import com.facebook.buck.core.config.FakeBuckConfig;
+import com.facebook.buck.core.exceptions.DependencyStack;
 import com.facebook.buck.core.exceptions.HumanReadableException;
+import com.facebook.buck.core.graph.transformation.executor.DepsAwareExecutor;
+import com.facebook.buck.core.graph.transformation.executor.impl.DefaultDepsAwareExecutor;
+import com.facebook.buck.core.graph.transformation.model.ComputeResult;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.ImmutableCellRelativePath;
 import com.facebook.buck.core.model.InternalFlavor;
 import com.facebook.buck.core.model.UnconfiguredBuildTargetFactoryForTests;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
 import com.facebook.buck.core.model.actiongraph.computation.ActionGraphProviderBuilder;
 import com.facebook.buck.core.model.targetgraph.TargetGraph;
 import com.facebook.buck.core.model.targetgraph.TargetNode;
+import com.facebook.buck.core.model.targetgraph.TestTargetGraphCreationResultFactory;
 import com.facebook.buck.core.model.targetgraph.impl.TargetNodes;
-import com.facebook.buck.core.parser.buildtargetparser.ParsingUnconfiguredBuildTargetFactory;
+import com.facebook.buck.core.parser.buildtargetparser.ParsingUnconfiguredBuildTargetViewFactory;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.plugin.impl.BuckPluginManagerFactory;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
-import com.facebook.buck.core.rules.knowntypes.KnownRuleTypesProvider;
 import com.facebook.buck.core.rules.knowntypes.TestKnownRuleTypesProvider;
+import com.facebook.buck.core.rules.knowntypes.provider.KnownRuleTypesProvider;
 import com.facebook.buck.core.sourcepath.PathSourcePath;
 import com.facebook.buck.core.toolchain.ToolchainCreationContext;
 import com.facebook.buck.core.toolchain.impl.ToolchainProviderBuilder;
@@ -71,21 +78,29 @@ import com.facebook.buck.io.ExecutableFinder;
 import com.facebook.buck.io.file.MorePaths;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.TestProjectFilesystems;
+import com.facebook.buck.io.watchman.ImmutableWatchmanOverflowEvent;
+import com.facebook.buck.io.watchman.ImmutableWatchmanPathEvent;
+import com.facebook.buck.io.watchman.WatchmanEvent.Kind;
 import com.facebook.buck.io.watchman.WatchmanFactory;
-import com.facebook.buck.io.watchman.WatchmanOverflowEvent;
 import com.facebook.buck.io.watchman.WatchmanPathEvent;
 import com.facebook.buck.json.JsonObjectHashing;
 import com.facebook.buck.jvm.core.JavaLibrary;
 import com.facebook.buck.manifestservice.ManifestService;
-import com.facebook.buck.parser.AbstractParserConfig.ApplyDefaultFlavorsMode;
+import com.facebook.buck.parser.config.ParserConfig;
+import com.facebook.buck.parser.config.ParserConfig.ApplyDefaultFlavorsMode;
 import com.facebook.buck.parser.events.ParseBuckFileEvent;
 import com.facebook.buck.parser.exceptions.BuildFileParseException;
 import com.facebook.buck.parser.exceptions.MissingBuildFileException;
+import com.facebook.buck.parser.spec.BuildFileSpec;
+import com.facebook.buck.parser.spec.BuildTargetSpec;
+import com.facebook.buck.parser.spec.ImmutableBuildTargetSpec;
+import com.facebook.buck.parser.spec.ImmutableTargetNodePredicateSpec;
 import com.facebook.buck.rules.coercer.DefaultConstructorArgMarshaller;
 import com.facebook.buck.rules.coercer.DefaultTypeCoercerFactory;
 import com.facebook.buck.rules.coercer.TypeCoercerFactory;
 import com.facebook.buck.rules.keys.config.TestRuleKeyConfigurationFactory;
 import com.facebook.buck.shell.GenruleDescriptionArg;
+import com.facebook.buck.testutil.CloseableResource;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.TemporaryPaths;
 import com.facebook.buck.testutil.TestConsole;
@@ -121,7 +136,6 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -142,6 +156,10 @@ import org.pf4j.PluginManager;
 
 @RunWith(Parameterized.class)
 public class ParserWithConfigurableAttributesTest {
+
+  @Rule
+  public CloseableResource<DepsAwareExecutor<? super ComputeResult, ?>> executor =
+      CloseableResource.of(() -> DefaultDepsAwareExecutor.of(4));
 
   @Rule public TemporaryPaths tempDir = new TemporaryPaths();
   @Rule public ExpectedException thrown = ExpectedException.none();
@@ -203,7 +221,7 @@ public class ParserWithConfigurableAttributesTest {
       Path buildFile)
       throws BuildFileParseException {
     try (PerBuildState state =
-        PerBuildStateFactory.createFactory(
+        new PerBuildStateFactory(
                 typeCoercerFactory,
                 new DefaultConstructorArgMarshaller(typeCoercerFactory),
                 knownRuleTypesProvider,
@@ -213,11 +231,11 @@ public class ParserWithConfigurableAttributesTest {
                 getManifestSupplier(),
                 new FakeFileHashCache(
                     ImmutableMap.of(buildFile, HashCode.fromBytes(new byte[] {1}))),
-                new ParsingUnconfiguredBuildTargetFactory())
+                new ParsingUnconfiguredBuildTargetViewFactory(),
+                UnconfiguredTargetConfiguration.INSTANCE)
             .create(
                 ParsingContext.builder(cell, executor).setProfilingEnabled(enableProfiling).build(),
-                parser.getPermState(),
-                ImmutableList.of())) {
+                parser.getPermState())) {
       AbstractParser.getTargetNodeRawAttributes(state, cell, buildFile).getTargets();
     }
   }
@@ -254,7 +272,7 @@ public class ParserWithConfigurableAttributesTest {
         TestProjectFilesystems.createProjectFilesystem(
             root, ConfigBuilder.createFromText("[project]", "ignore = **/*.swp"));
     cellRoot = filesystem.getRootPath();
-    buildTarget = BuildTargetFactory.newInstance(cellRoot, "//:cake");
+    buildTarget = BuildTargetFactory.newInstance("//:cake");
     eventBus = BuckEventBusForTests.newInstance();
 
     ImmutableMap.Builder<String, String> projectSectionBuilder = ImmutableMap.builder();
@@ -287,32 +305,43 @@ public class ParserWithConfigurableAttributesTest {
             filesystem,
             processExecutor,
             executableFinder,
-            TestRuleKeyConfigurationFactory.create(),
-            () -> EmptyTargetConfiguration.INSTANCE);
+            TestRuleKeyConfigurationFactory.create());
 
     ToolchainProviderBuilder toolchainProviderBuilder = new ToolchainProviderBuilder();
     Optional<AppleDeveloperDirectoryProvider> appleDeveloperDirectoryProvider =
         new AppleDeveloperDirectoryProviderFactory()
-            .createToolchain(toolchainProviderBuilder.build(), toolchainCreationContext);
+            .createToolchain(
+                toolchainProviderBuilder.build(),
+                toolchainCreationContext,
+                UnconfiguredTargetConfiguration.INSTANCE);
     appleDeveloperDirectoryProvider.ifPresent(
         provider ->
             toolchainProviderBuilder.withToolchain(
                 AppleDeveloperDirectoryProvider.DEFAULT_NAME, provider));
     Optional<AppleToolchainProvider> appleToolchainProvider =
         new AppleToolchainProviderFactory()
-            .createToolchain(toolchainProviderBuilder.build(), toolchainCreationContext);
+            .createToolchain(
+                toolchainProviderBuilder.build(),
+                toolchainCreationContext,
+                UnconfiguredTargetConfiguration.INSTANCE);
     appleToolchainProvider.ifPresent(
         provider ->
             toolchainProviderBuilder.withToolchain(AppleToolchainProvider.DEFAULT_NAME, provider));
     Optional<AppleSdkLocation> appleSdkLocation =
         new AppleSdkLocationFactory()
-            .createToolchain(toolchainProviderBuilder.build(), toolchainCreationContext);
+            .createToolchain(
+                toolchainProviderBuilder.build(),
+                toolchainCreationContext,
+                UnconfiguredTargetConfiguration.INSTANCE);
     appleSdkLocation.ifPresent(
         provider ->
             toolchainProviderBuilder.withToolchain(AppleSdkLocation.DEFAULT_NAME, provider));
     Optional<AppleCxxPlatformsProvider> appleCxxPlatformsProvider =
         new AppleCxxPlatformsProviderFactory()
-            .createToolchain(toolchainProviderBuilder.build(), toolchainCreationContext);
+            .createToolchain(
+                toolchainProviderBuilder.build(),
+                toolchainCreationContext,
+                UnconfiguredTargetConfiguration.INSTANCE);
     appleCxxPlatformsProvider.ifPresent(
         provider ->
             toolchainProviderBuilder.withToolchain(
@@ -323,7 +352,7 @@ public class ParserWithConfigurableAttributesTest {
     knownRuleTypesProvider = TestKnownRuleTypesProvider.create(pluginManager);
 
     typeCoercerFactory = new DefaultTypeCoercerFactory();
-    parser = TestParserFactory.create(cell, knownRuleTypesProvider, eventBus);
+    parser = TestParserFactory.create(executor.get(), cell, knownRuleTypesProvider, eventBus);
 
     counter = new ParseEventStartedCounter();
     eventBus.register(counter);
@@ -344,15 +373,16 @@ public class ParserWithConfigurableAttributesTest {
   public void testParseBuildFilesForTargetsWithOverlappingTargets() throws Exception {
     // Execute buildTargetGraphForBuildTargets() with multiple targets that require parsing the same
     // build file.
-    BuildTarget fooTarget = BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "foo");
-    BuildTarget barTarget = BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "bar");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(fooTarget, barTarget);
+    BuildTarget fooTarget = BuildTargetFactory.newInstance("//java/com/facebook", "foo");
+    BuildTarget barTarget = BuildTargetFactory.newInstance("//java/com/facebook", "bar");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(fooTarget, barTarget);
 
     // The EventBus should be updated with events indicating how parsing ran.
     FakeBuckEventListener listener = new FakeBuckEventListener();
     eventBus.register(listener);
 
-    TargetGraph targetGraph = parser.buildTargetGraph(parsingContext, buildTargets);
+    TargetGraph targetGraph =
+        parser.buildTargetGraph(parsingContext, buildTargets).getTargetGraph();
     ActionGraphBuilder graphBuilder = buildActionGraph(eventBus, targetGraph, cell);
     BuildRule fooRule = graphBuilder.requireRule(fooTarget);
     assertNotNull(fooRule);
@@ -373,13 +403,15 @@ public class ParserWithConfigurableAttributesTest {
   public void testMissingBuildRuleInValidFile()
       throws BuildFileParseException, IOException, InterruptedException {
     // Execute buildTargetGraphForBuildTargets() with a target in a valid file but a bad rule name.
-    BuildTarget fooTarget = BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "foo");
-    BuildTarget razTarget = BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "raz");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(fooTarget, razTarget);
+    BuildTarget fooTarget = BuildTargetFactory.newInstance("//java/com/facebook", "foo");
+    BuildTarget razTarget = BuildTargetFactory.newInstance("//java/com/facebook", "raz");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(fooTarget, razTarget);
 
     thrown.expectMessage(
         "The rule //java/com/facebook:raz could not be found.\nPlease check the spelling and whether it exists in "
-            + filesystem.resolve(razTarget.getBasePath()).resolve(DEFAULT_BUILD_FILE_NAME));
+            + filesystem
+                .resolve(razTarget.getCellRelativeBasePath().getPath())
+                .resolve(DEFAULT_BUILD_FILE_NAME));
 
     parser.buildTargetGraph(parsingContext, buildTargets);
   }
@@ -387,8 +419,8 @@ public class ParserWithConfigurableAttributesTest {
   @Test
   public void testMissingBuildFile()
       throws InterruptedException, BuildFileParseException, IOException {
-    BuildTarget target = BuildTargetFactory.newInstance(cellRoot, "//path/to/nowhere", "nowhere");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(target);
+    BuildTarget target = BuildTargetFactory.newInstance("//path/to/nowhere", "nowhere");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(target);
 
     thrown.expect(MissingBuildFileException.class);
     thrown.expectMessage(
@@ -403,7 +435,7 @@ public class ParserWithConfigurableAttributesTest {
   public void shouldThrowAnExceptionIfConstructorArgMashallingFails()
       throws IOException, BuildFileParseException {
     thrown.expect(HumanReadableException.class);
-    thrown.expectMessage("found ////cake:walk");
+    thrown.expectMessage("When parsing ////cake:walk");
 
     Path buckFile = cellRoot.resolve("BUCK");
     Files.write(
@@ -411,7 +443,7 @@ public class ParserWithConfigurableAttributesTest {
         "genrule(name = 'cake', out = 'file.txt', cmd = '$(exe ////cake:walk) > $OUT')"
             .getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget);
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -430,9 +462,7 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(buckFile, "I do not parse as python".getBytes(UTF_8));
 
     parser.buildTargetGraph(
-        parsingContext,
-        Collections.singleton(
-            BuildTargetFactory.newInstance(cell.getFilesystem().getRootPath(), "//:cake")));
+        parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:cake")));
   }
 
   @Test
@@ -448,7 +478,7 @@ public class ParserWithConfigurableAttributesTest {
                 + "genrule(name = 'cake', out = 'file.txt', cmd = 'touch $OUT')\n")
             .getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget);
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -459,7 +489,9 @@ public class ParserWithConfigurableAttributesTest {
         StandardOpenOption.APPEND);
     Files.write(testBuildFile, "foo(name='BUCK')\n".getBytes(UTF_8), StandardOpenOption.APPEND);
     parser.getTargetNode(
-        parsingContext, BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook:foo"));
+        parsingContext,
+        BuildTargetFactory.newInstance("//java/com/facebook:foo"),
+        DependencyStack.root());
   }
 
   @Test
@@ -471,7 +503,7 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(
         buckFile, ("genrule(name = None, out = 'file.txt', cmd = 'touch $OUT')\n").getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget);
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -479,7 +511,7 @@ public class ParserWithConfigurableAttributesTest {
       throws BuildFileParseException, InterruptedException, IOException {
     BuildTarget flavored =
         BuildTargetFactory.newInstance(
-            cellRoot, "//java/com/facebook", "foo", InternalFlavor.of("doesNotExist"));
+            "//java/com/facebook", "foo", InternalFlavor.of("doesNotExist"));
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -494,7 +526,7 @@ public class ParserWithConfigurableAttributesTest {
       throws BuildFileParseException, InterruptedException, IOException {
     BuildTarget flavored =
         BuildTargetFactory.newInstance(
-            cellRoot, "//java/com/facebook", "foo", InternalFlavor.of("android-unknown"));
+            "//java/com/facebook", "foo", InternalFlavor.of("android-unknown"));
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -505,7 +537,7 @@ public class ParserWithConfigurableAttributesTest {
         containsString(
             "android-unknown: Please make sure you have the Android SDK/NDK "
                 + "installed and set up. "
-                + "See https://buckbuild.com/setup/install.html#locate-android-sdk"));
+                + "See https://buck.build/setup/getting_started.html#locate-android-sdk"));
     parser.buildTargetGraph(parsingContext, ImmutableSortedSet.of(flavored));
   }
 
@@ -513,7 +545,7 @@ public class ParserWithConfigurableAttributesTest {
   public void shouldThrowAnExceptionWhenAFlavorIsAskedOfATargetThatDoesntSupportFlavors()
       throws BuildFileParseException, InterruptedException, IOException {
     BuildTarget flavored =
-        BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "baz", JavaLibrary.SRC_JAR);
+        BuildTargetFactory.newInstance("//java/com/facebook", "baz", JavaLibrary.SRC_JAR);
 
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage(
@@ -542,9 +574,8 @@ public class ParserWithConfigurableAttributesTest {
     tempDir.newFolder("java", "com", "facebook", "invalid", "lib");
     tempDir.newFile("java/com/facebook/invalid/lib/BUCK");
 
-    BuildTarget fooTarget =
-        BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook/invalid", "foo");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(fooTarget);
+    BuildTarget fooTarget = BuildTargetFactory.newInstance("//java/com/facebook/invalid", "foo");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(fooTarget);
 
     parser.buildTargetGraph(parsingContext, buildTargets);
   }
@@ -565,7 +596,9 @@ public class ParserWithConfigurableAttributesTest {
     filterAllTargetsInProject(parser, parsingContext);
 
     // Process event.
-    parser.getPermState().invalidateBasedOn(WatchmanOverflowEvent.of(filesystem.getRootPath(), ""));
+    parser
+        .getPermState()
+        .invalidateBasedOn(ImmutableWatchmanOverflowEvent.of(filesystem.getRootPath(), ""));
 
     // Call filterAllTargetsInProject to request cached rules.
     filterAllTargetsInProject(parser, parsingContext);
@@ -580,7 +613,9 @@ public class ParserWithConfigurableAttributesTest {
     filterAllTargetsInProject(parser, parsingContext);
 
     // Send overflow event.
-    parser.getPermState().invalidateBasedOn(WatchmanOverflowEvent.of(filesystem.getRootPath(), ""));
+    parser
+        .getPermState()
+        .invalidateBasedOn(ImmutableWatchmanOverflowEvent.of(filesystem.getRootPath(), ""));
 
     // Call filterAllTargetsInProject to request cached rules.
     filterAllTargetsInProject(parser, parsingContext);
@@ -592,9 +627,9 @@ public class ParserWithConfigurableAttributesTest {
     parser
         .getPermState()
         .invalidateBasedOn(
-            WatchmanPathEvent.of(
+            ImmutableWatchmanPathEvent.of(
                 filesystem.getRootPath(),
-                WatchmanPathEvent.Kind.CREATE,
+                Kind.CREATE,
                 Paths.get("java/com/facebook/Something.java")));
 
     // Call filterAllTargetsInProject to request cached rules.
@@ -602,6 +637,101 @@ public class ParserWithConfigurableAttributesTest {
 
     // Test that the third parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated cache.", 3, counter.calls);
+  }
+
+  @Test
+  public void whenNotifiedOfBuildFileWithConfigurationRulesThenCacheRulesAreInvalidated()
+      throws BuildFileParseException, IOException {
+
+    tempDir.newFolder("config");
+    Path configBuckFile = tempDir.newFile("config/BUCK");
+    Files.write(
+        configBuckFile,
+        ("config_setting(name = 'config', values = {})").getBytes(UTF_8),
+        StandardOpenOption.APPEND);
+
+    Path buckFile = tempDir.newFile("BUCK");
+    Files.write(
+        buckFile,
+        ("java_library("
+                + "  name = 'cake',"
+                + "  target = select({"
+                + "    '//config:config': '7',"
+                + "    'DEFAULT': '8',"
+                + "  })"
+                + ")"
+                + "\n")
+            .getBytes(UTF_8),
+        StandardOpenOption.APPEND);
+
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+
+    assertEquals(2, counter.calls);
+
+    WatchmanPathEvent event =
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(),
+            Kind.MODIFY,
+            MorePaths.relativize(tempDir.getRoot().toRealPath(), configBuckFile));
+    parser.getPermState().invalidateBasedOn(event);
+
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+
+    // Test that the second call triggers re-parsing of all files.
+    assertEquals("Should have invalidated cache.", 4, counter.calls);
+  }
+
+  @Test
+  public void whenNotifiedOfBuildFileDependentWithConfigurationRulesThenCacheRulesAreInvalidated()
+      throws BuildFileParseException, IOException {
+
+    tempDir.newFolder("config");
+    Path configBuckFile = tempDir.newFile("config/BUCK");
+    Files.write(
+        configBuckFile,
+        ("load('//config:defs.bzl', 'java_lib')\nconfig_setting(name = 'config', values = {})")
+            .getBytes(UTF_8),
+        StandardOpenOption.APPEND);
+    Path defsFile = tempDir.newFile("config/defs.bzl");
+    Files.write(
+        defsFile,
+        ("def java_lib(name, **kwargs):\n"
+                + "    return native.java_library(\n"
+                + "        name = name,\n"
+                + "        **kwargs\n"
+                + "    )\n")
+            .getBytes(UTF_8),
+        StandardOpenOption.APPEND);
+
+    Path buckFile = tempDir.newFile("BUCK");
+    Files.write(
+        buckFile,
+        ("java_library("
+                + "  name = 'cake',"
+                + "  target = select({"
+                + "    '//config:config': '7',"
+                + "    'DEFAULT': '8',"
+                + "  })"
+                + ")"
+                + "\n")
+            .getBytes(UTF_8),
+        StandardOpenOption.APPEND);
+
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+
+    assertEquals(2, counter.calls);
+
+    WatchmanPathEvent event =
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(),
+            Kind.MODIFY,
+            MorePaths.relativize(tempDir.getRoot().toRealPath(), defsFile));
+    parser.getPermState().invalidateBasedOn(event);
+
+    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+
+    // Test that the second call triggers re-parsing of all files.
+    assertEquals("Should have invalidated cache.", 4, counter.calls);
   }
 
   @Test
@@ -649,9 +779,9 @@ public class ParserWithConfigurableAttributesTest {
     parser
         .getPermState()
         .invalidateBasedOn(
-            WatchmanPathEvent.of(
+            ImmutableWatchmanPathEvent.of(
                 filesystem.getRootPath(),
-                WatchmanPathEvent.Kind.CREATE,
+                Kind.CREATE,
                 MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile)));
 
     // Call parseBuildFile to request cached rules.
@@ -687,9 +817,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
+            Kind.MODIFY,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -726,9 +856,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
+            Kind.DELETE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -765,9 +895,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
+            Kind.CREATE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -806,9 +936,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
+            Kind.MODIFY,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -845,9 +975,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
+            Kind.DELETE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -884,9 +1014,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
+            Kind.CREATE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -923,9 +1053,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
+            Kind.MODIFY,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -962,9 +1092,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
+            Kind.DELETE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1001,9 +1131,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
+            Kind.CREATE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1040,9 +1170,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
+            Kind.MODIFY,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1079,9 +1209,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
+            Kind.DELETE,
             MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1119,10 +1249,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
-            Paths.get("java/com/facebook/SomeClass.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.CREATE, Paths.get("java/com/facebook/SomeClass.java"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1172,10 +1300,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
-            Paths.get("java/com/facebook/SomeClass.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.CREATE, Paths.get("java/com/facebook/SomeClass.java"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1211,10 +1337,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
-            Paths.get("java/com/facebook/SomeClass.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.MODIFY, Paths.get("java/com/facebook/SomeClass.java"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1251,10 +1375,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
-            Paths.get("java/com/facebook/SomeClass.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, Paths.get("java/com/facebook/SomeClass.java"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1290,9 +1412,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
+            Kind.CREATE,
             Paths.get("java/com/facebook/MumbleSwp.Java.swp"));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1329,9 +1451,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
+            Kind.MODIFY,
             Paths.get("java/com/facebook/MumbleSwp.Java.swp"));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1368,9 +1490,9 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
+        ImmutableWatchmanPathEvent.of(
             filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
+            Kind.DELETE,
             Paths.get("java/com/facebook/MumbleSwp.Java.swp"));
     parser.getPermState().invalidateBasedOn(event);
 
@@ -1407,10 +1529,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.CREATE,
-            Paths.get("SomeClass.java__backup"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.CREATE, Paths.get("SomeClass.java__backup"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1446,10 +1566,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
-            Paths.get("SomeClass.java__backup"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.MODIFY, Paths.get("SomeClass.java__backup"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1485,10 +1603,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Process event.
     WatchmanPathEvent event =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
-            Paths.get("SomeClass.java__backup"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, Paths.get("SomeClass.java__backup"));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1549,7 +1665,8 @@ public class ParserWithConfigurableAttributesTest {
     Cell newCell =
         new TestCellBuilder().setFilesystem(newFilesystem).setBuckConfig(newConfig).build();
 
-    Parser newParser = TestParserFactory.create(newCell, knownRuleTypesProvider, eventBus);
+    Parser newParser =
+        TestParserFactory.create(executor.get(), newCell, knownRuleTypesProvider, eventBus);
 
     filterAllTargetsInProject(newParser, parsingContext.withCell(newCell));
 
@@ -1560,8 +1677,8 @@ public class ParserWithConfigurableAttributesTest {
   public void whenAllRulesThenSingleTargetRequestedThenRulesAreParsedOnce()
       throws BuildFileParseException, IOException, InterruptedException {
     filterAllTargetsInProject(parser, parsingContext);
-    BuildTarget foo = BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "foo");
-    parser.buildTargetGraph(parsingContext, ImmutableList.of(foo));
+    BuildTarget foo = BuildTargetFactory.newInstance("//java/com/facebook", "foo");
+    parser.buildTargetGraph(parsingContext, ImmutableSet.of(foo));
 
     assertEquals("Should have cached build rules.", 1, counter.calls);
   }
@@ -1569,8 +1686,8 @@ public class ParserWithConfigurableAttributesTest {
   @Test
   public void whenSingleTargetThenAllRulesRequestedThenRulesAreParsedOnce()
       throws BuildFileParseException, IOException, InterruptedException {
-    BuildTarget foo = BuildTargetFactory.newInstance(cellRoot, "//java/com/facebook", "foo");
-    parser.buildTargetGraph(parsingContext, ImmutableList.of(foo));
+    BuildTarget foo = BuildTargetFactory.newInstance("//java/com/facebook", "foo");
+    parser.buildTargetGraph(parsingContext, ImmutableSet.of(foo));
     filterAllTargetsInProject(parser, parsingContext);
 
     assertEquals("Should have replaced build rules", 1, counter.calls);
@@ -1592,8 +1709,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Fetch //bar:bar#src to put it in cache.
     BuildTarget barTarget =
-        BuildTargetFactory.newInstance(cellRoot, "//bar", "bar", InternalFlavor.of("src"));
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(barTarget);
+        BuildTargetFactory.newInstance("//bar", "bar", InternalFlavor.of("src"));
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(barTarget);
 
     parser.buildTargetGraph(parsingContext, buildTargets);
 
@@ -1603,16 +1720,12 @@ public class ParserWithConfigurableAttributesTest {
     Files.delete(testFooBuckFile);
     Files.write(testBarBuckFile, "java_library(name = 'bar')\n".getBytes(UTF_8));
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.DELETE,
-            Paths.get("foo").resolve("BUCK"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, Paths.get("foo").resolve("BUCK"));
     parser.getPermState().invalidateBasedOn(deleteEvent);
     WatchmanPathEvent modifyEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(),
-            WatchmanPathEvent.Kind.MODIFY,
-            Paths.get("bar").resolve("BUCK"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.MODIFY, Paths.get("bar").resolve("BUCK"));
     parser.getPermState().invalidateBasedOn(modifyEvent);
 
     parser.buildTargetGraph(parsingContext, buildTargets);
@@ -1634,8 +1747,8 @@ public class ParserWithConfigurableAttributesTest {
 
     // Fetch //bar:bar#src to put it in cache.
     BuildTarget barTarget =
-        BuildTargetFactory.newInstance(cellRoot, "//bar", "bar", InternalFlavor.of("src"));
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(barTarget);
+        BuildTargetFactory.newInstance("//bar", "bar", InternalFlavor.of("src"));
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(barTarget);
 
     parser.buildTargetGraph(parsingContext, buildTargets);
   }
@@ -1649,10 +1762,10 @@ public class ParserWithConfigurableAttributesTest {
         testFooBuckFile,
         "java_library(name = 'lib', srcs=glob(['*.java']), visibility=['PUBLIC'])\n"
             .getBytes(UTF_8));
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
     HashCode original = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
 
-    parser = TestParserFactory.create(cell, knownRuleTypesProvider);
+    parser = TestParserFactory.create(executor.get(), cell, knownRuleTypesProvider);
     Path testFooJavaFile = tempDir.newFile("foo/Foo.java");
     Files.write(testFooJavaFile, "// Ceci n'est pas une Javafile\n".getBytes(UTF_8));
     HashCode updated = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
@@ -1676,13 +1789,13 @@ public class ParserWithConfigurableAttributesTest {
     Path testBarJavaFile = tempDir.newFile("foo/Bar.java");
     Files.write(testBarJavaFile, "// Seriously, no Java here\n".getBytes(UTF_8));
 
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
     HashCode originalHash = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
 
     Files.delete(testBarJavaFile);
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(), WatchmanPathEvent.Kind.DELETE, Paths.get("foo/Bar.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, Paths.get("foo/Bar.java"));
     parser.getPermState().invalidateBasedOn(deleteEvent);
 
     HashCode updatedHash = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
@@ -1703,17 +1816,17 @@ public class ParserWithConfigurableAttributesTest {
     Path testFooJavaFile = tempDir.newFile("foo/Foo.java");
     Files.write(testFooJavaFile, "// Ceci n'est pas une Javafile\n".getBytes(UTF_8));
 
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
 
     HashCode originalHash = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
 
     Files.move(testFooJavaFile, testFooJavaFile.resolveSibling("Bar.java"));
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(), WatchmanPathEvent.Kind.DELETE, Paths.get("foo/Foo.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, Paths.get("foo/Foo.java"));
     WatchmanPathEvent createEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(), WatchmanPathEvent.Kind.CREATE, Paths.get("foo/Bar.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.CREATE, Paths.get("foo/Bar.java"));
     parser.getPermState().invalidateBasedOn(deleteEvent);
     parser.getPermState().invalidateBasedOn(createEvent);
 
@@ -1733,8 +1846,8 @@ public class ParserWithConfigurableAttributesTest {
                 + "java_library(name = 'lib2', visibility=['PUBLIC'])\n")
             .getBytes(UTF_8));
 
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
-    BuildTarget fooLib2Target = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib2");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
+    BuildTarget fooLib2Target = BuildTargetFactory.newInstance("//foo", "lib2");
 
     ImmutableMap<BuildTarget, HashCode> hashes =
         buildTargetGraphAndGetHashCodes(parser, fooLibTarget, fooLib2Target);
@@ -1756,14 +1869,14 @@ public class ParserWithConfigurableAttributesTest {
                 + "java_library(name = 'lib2', deps = [], visibility=['PUBLIC'])\n")
             .getBytes(UTF_8));
 
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
-    BuildTarget fooLib2Target = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib2");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
+    BuildTarget fooLib2Target = BuildTargetFactory.newInstance("//foo", "lib2");
     ImmutableMap<BuildTarget, HashCode> hashes =
         buildTargetGraphAndGetHashCodes(parser, fooLibTarget, fooLib2Target);
     HashCode libKey = hashes.get(fooLibTarget);
     HashCode lib2Key = hashes.get(fooLib2Target);
 
-    parser = TestParserFactory.create(cell, knownRuleTypesProvider);
+    parser = TestParserFactory.create(executor.get(), cell, knownRuleTypesProvider);
     Files.write(
         testFooBuckFile,
         ("java_library(name = 'lib', deps = [], visibility=['PUBLIC'])\njava_library("
@@ -1782,13 +1895,14 @@ public class ParserWithConfigurableAttributesTest {
 
     Path testFooBuckFile = tempDir.newFile("foo/BUCK");
     Files.write(testFooBuckFile, "java_library(name = 'lib')\n".getBytes(UTF_8));
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
 
-    TargetNode<?> targetNode = parser.getTargetNode(parsingContext, fooLibTarget);
+    TargetNode<?> targetNode =
+        parser.getTargetNode(parsingContext, fooLibTarget, DependencyStack.root());
     assertThat(targetNode.getBuildTarget(), equalTo(fooLibTarget));
 
     SortedMap<String, Object> targetNodeAttributes =
-        parser.getTargetNodeRawAttributes(parsingContext, targetNode);
+        parser.getTargetNodeRawAttributes(parsingContext, targetNode, DependencyStack.root());
     assertThat(targetNodeAttributes, Matchers.hasKey("name"));
     assertThat(
         targetNodeAttributes.get("name"), equalTo(targetNode.getBuildTarget().getShortName()));
@@ -1811,11 +1925,12 @@ public class ParserWithConfigurableAttributesTest {
         testBuckFile, "java_library(name = 'lib', srcs=glob(['bar/*.java']))\n".getBytes(UTF_8));
 
     // Fetch //:lib to put it in cache.
-    BuildTarget libTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(libTarget);
+    BuildTarget libTarget = BuildTargetFactory.newInstance("//foo", "lib");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(libTarget);
 
     {
-      TargetGraph targetGraph = parser.buildTargetGraph(parsingContext, buildTargets);
+      TargetGraph targetGraph =
+          parser.buildTargetGraph(parsingContext, buildTargets).getTargetGraph();
       ActionGraphBuilder graphBuilder = buildActionGraph(eventBus, targetGraph, cell);
 
       JavaLibrary libRule = (JavaLibrary) graphBuilder.requireRule(libTarget);
@@ -1826,12 +1941,13 @@ public class ParserWithConfigurableAttributesTest {
 
     tempDir.newFile("bar/Baz.java");
     WatchmanPathEvent createEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(), WatchmanPathEvent.Kind.CREATE, Paths.get("bar/Baz.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.CREATE, Paths.get("bar/Baz.java"));
     parser.getPermState().invalidateBasedOn(createEvent);
 
     {
-      TargetGraph targetGraph = parser.buildTargetGraph(parsingContext, buildTargets);
+      TargetGraph targetGraph =
+          parser.buildTargetGraph(parsingContext, buildTargets).getTargetGraph();
       ActionGraphBuilder graphBuilder = buildActionGraph(eventBus, targetGraph, cell);
 
       JavaLibrary libRule = (JavaLibrary) graphBuilder.requireRule(libTarget);
@@ -1861,11 +1977,12 @@ public class ParserWithConfigurableAttributesTest {
         testBuckFile, "java_library(name = 'lib', srcs=glob(['bar/*.java']))\n".getBytes(UTF_8));
 
     // Fetch //:lib to put it in cache.
-    BuildTarget libTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(libTarget);
+    BuildTarget libTarget = BuildTargetFactory.newInstance("//foo", "lib");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(libTarget);
 
     {
-      TargetGraph targetGraph = parser.buildTargetGraph(parsingContext, buildTargets);
+      TargetGraph targetGraph =
+          parser.buildTargetGraph(parsingContext, buildTargets).getTargetGraph();
       ActionGraphBuilder graphBuilder = buildActionGraph(eventBus, targetGraph, cell);
 
       JavaLibrary libRule = (JavaLibrary) graphBuilder.requireRule(libTarget);
@@ -1879,12 +1996,13 @@ public class ParserWithConfigurableAttributesTest {
 
     Files.delete(bazSourceFile);
     WatchmanPathEvent deleteEvent =
-        WatchmanPathEvent.of(
-            filesystem.getRootPath(), WatchmanPathEvent.Kind.DELETE, Paths.get("bar/Baz.java"));
+        ImmutableWatchmanPathEvent.of(
+            filesystem.getRootPath(), Kind.DELETE, Paths.get("bar/Baz.java"));
     parser.getPermState().invalidateBasedOn(deleteEvent);
 
     {
-      TargetGraph targetGraph = parser.buildTargetGraph(parsingContext, buildTargets);
+      TargetGraph targetGraph =
+          parser.buildTargetGraph(parsingContext, buildTargets).getTargetGraph();
       ActionGraphBuilder graphBuilder = buildActionGraph(eventBus, targetGraph, cell);
 
       JavaLibrary libRule = (JavaLibrary) graphBuilder.requireRule(libTarget);
@@ -1922,8 +2040,8 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(
         testBuckFile, "java_library(name = 'lib', srcs=glob(['bar/*.java']))\n".getBytes(UTF_8));
 
-    BuildTarget libTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(libTarget);
+    BuildTarget libTarget = BuildTargetFactory.newInstance("//foo", "lib");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(libTarget);
 
     parser.buildTargetGraph(parsingContext.withCell(cell), buildTargets);
   }
@@ -1951,8 +2069,8 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(
         testBuckFile, "java_library(name = 'lib', srcs=glob(['bar/*.java']))\n".getBytes(UTF_8));
 
-    BuildTarget libTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
-    Iterable<BuildTarget> buildTargets = ImmutableList.of(libTarget);
+    BuildTarget libTarget = BuildTargetFactory.newInstance("//foo", "lib");
+    ImmutableSet<BuildTarget> buildTargets = ImmutableSet.of(libTarget);
 
     parser.buildTargetGraph(parsingContext.withCell(cell), buildTargets);
 
@@ -1960,7 +2078,7 @@ public class ParserWithConfigurableAttributesTest {
     for (BuildTarget target : buildTargets) {
       assertTrue(
           permState
-              .getOrCreateNodeCache(TargetNode.class)
+              .getOrCreateNodeCache(DaemonicParserState.TARGET_NODE_CACHE_TYPE)
               .lookupComputedNode(cell, target, eventBus)
               .isPresent());
     }
@@ -1974,7 +2092,7 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(
         testFooBuckFile, "java_library(name = 'lib', visibility=['PUBLIC'])\n".getBytes(UTF_8));
 
-    BuildTarget fooLibTarget = BuildTargetFactory.newInstance(cellRoot, "//foo", "lib");
+    BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
 
     // We can't precalculate the hash, since it depends on the buck version. Check for the presence
     // of a hash for the right key.
@@ -1986,8 +2104,7 @@ public class ParserWithConfigurableAttributesTest {
   @Test
   public void readConfigReadsConfig() throws Exception {
     Path buckFile = cellRoot.resolve("BUCK");
-    BuildTarget buildTarget =
-        BuildTargetFactory.newInstance(filesystem.getRootPath(), "//", "cake");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//", "cake");
     Files.write(
         buckFile,
         Joiner.on("")
@@ -2005,11 +2122,12 @@ public class ParserWithConfigurableAttributesTest {
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
     TargetNode<GenruleDescriptionArg> node =
         TargetNodes.castArg(
-                parser.getTargetNode(parsingContext.withCell(cell), buildTarget),
+                parser.getTargetNode(
+                    parsingContext.withCell(cell), buildTarget, DependencyStack.root()),
                 GenruleDescriptionArg.class)
             .get();
 
-    assertThat(node.getConstructorArg().getOut(), is(equalTo("default.txt")));
+    assertThat(node.getConstructorArg().getOut().get(), is(equalTo("default.txt")));
   }
 
   @Test
@@ -2032,11 +2150,11 @@ public class ParserWithConfigurableAttributesTest {
 
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated.", 1, counter.calls);
@@ -2061,22 +2179,20 @@ public class ParserWithConfigurableAttributesTest {
 
     ImmutableSet<BuildTarget> result =
         parser
-            .buildTargetGraphWithConfigurationTargets(
+            .buildTargetGraphWithTopLevelConfigurationTargets(
                 ParsingContext.builder(cell, executorService)
                     .setApplyDefaultFlavorsMode(ApplyDefaultFlavorsMode.SINGLE)
                     .build(),
                 ImmutableList.of(
                     ImmutableBuildTargetSpec.from(
-                        UnconfiguredBuildTargetFactoryForTests.newInstance(
-                            cellRoot, "//lib", "lib"))),
-                EmptyTargetConfiguration.INSTANCE)
+                        UnconfiguredBuildTargetFactoryForTests.newInstance("//lib", "lib"))),
+                Optional.empty())
             .getBuildTargets();
 
     assertThat(
         result,
         hasItems(
             BuildTargetFactory.newInstance(
-                cellRoot,
                 "//lib",
                 "lib",
                 InternalFlavor.of("iphonesimulator-x86_64"),
@@ -2108,26 +2224,21 @@ public class ParserWithConfigurableAttributesTest {
 
     ImmutableSet<BuildTarget> result =
         parser
-            .buildTargetGraphWithConfigurationTargets(
+            .buildTargetGraphWithTopLevelConfigurationTargets(
                 ParsingContext.builder(cell, executorService)
                     .setApplyDefaultFlavorsMode(ApplyDefaultFlavorsMode.SINGLE)
                     .build(),
                 ImmutableList.of(
                     BuildTargetSpec.from(
-                        UnconfiguredBuildTargetFactoryForTests.newInstance(
-                            cellRoot, "//lib", "lib"))),
-                EmptyTargetConfiguration.INSTANCE)
+                        UnconfiguredBuildTargetFactoryForTests.newInstance("//lib", "lib"))),
+                Optional.empty())
             .getBuildTargets();
 
     assertThat(
         result,
         hasItems(
             BuildTargetFactory.newInstance(
-                cellRoot,
-                "//lib",
-                "lib",
-                InternalFlavor.of("iphoneos-arm64"),
-                InternalFlavor.of("shared"))));
+                "//lib", "lib", InternalFlavor.of("iphoneos-arm64"), InternalFlavor.of("shared"))));
   }
 
   @Test
@@ -2159,26 +2270,21 @@ public class ParserWithConfigurableAttributesTest {
 
     ImmutableSet<BuildTarget> result =
         parser
-            .buildTargetGraphWithConfigurationTargets(
+            .buildTargetGraphWithTopLevelConfigurationTargets(
                 ParsingContext.builder(cell, executorService)
                     .setApplyDefaultFlavorsMode(ApplyDefaultFlavorsMode.SINGLE)
                     .build(),
                 ImmutableList.of(
                     BuildTargetSpec.from(
-                        UnconfiguredBuildTargetFactoryForTests.newInstance(
-                            cellRoot, "//lib", "lib"))),
-                EmptyTargetConfiguration.INSTANCE)
+                        UnconfiguredBuildTargetFactoryForTests.newInstance("//lib", "lib"))),
+                Optional.empty())
             .getBuildTargets();
 
     assertThat(
         result,
         hasItems(
             BuildTargetFactory.newInstance(
-                cellRoot,
-                "//lib",
-                "lib",
-                InternalFlavor.of("macosx-x86_64"),
-                InternalFlavor.of("shared"))));
+                "//lib", "lib", InternalFlavor.of("macosx-x86_64"), InternalFlavor.of("shared"))));
   }
 
   @Test
@@ -2203,12 +2309,12 @@ public class ParserWithConfigurableAttributesTest {
 
     ParsingContext parsingContext = ParsingContext.builder(cell, executorService).build();
 
-    parser.buildTargetGraphWithConfigurationTargets(
+    parser.buildTargetGraphWithTopLevelConfigurationTargets(
         parsingContext,
         ImmutableList.of(
             BuildTargetSpec.from(
-                UnconfiguredBuildTargetFactoryForTests.newInstance(cellRoot, "//lib", "gen"))),
-        EmptyTargetConfiguration.INSTANCE);
+                UnconfiguredBuildTargetFactoryForTests.newInstance("//lib", "gen"))),
+        Optional.empty());
 
     // The read bytes are dependent on the serialization format of the parser, and the absolute path
     // of the temporary BUCK file we wrote, so let's just assert that there are a reasonable
@@ -2219,23 +2325,23 @@ public class ParserWithConfigurableAttributesTest {
 
     // The value should be cached, so no bytes are read when re-computing.
     events.clear();
-    parser.buildTargetGraphWithConfigurationTargets(
+    parser.buildTargetGraphWithTopLevelConfigurationTargets(
         parsingContext,
         ImmutableList.of(
             BuildTargetSpec.from(
-                UnconfiguredBuildTargetFactoryForTests.newInstance(cellRoot, "//lib", "gen"))),
-        EmptyTargetConfiguration.INSTANCE);
+                UnconfiguredBuildTargetFactoryForTests.newInstance("//lib", "gen"))),
+        Optional.empty());
     assertEquals(0L, Iterables.getOnlyElement(events).getProcessedBytes());
   }
 
   @Test
   public void testGetCacheReturnsSame() {
     assertEquals(
-        parser.getPermState().getOrCreateNodeCache(TargetNode.class),
-        parser.getPermState().getOrCreateNodeCache(TargetNode.class));
+        parser.getPermState().getOrCreateNodeCache(DaemonicParserState.TARGET_NODE_CACHE_TYPE),
+        parser.getPermState().getOrCreateNodeCache(DaemonicParserState.TARGET_NODE_CACHE_TYPE));
     assertNotEquals(
-        parser.getPermState().getOrCreateNodeCache(TargetNode.class),
-        parser.getPermState().getOrCreateNodeCache(Map.class));
+        parser.getPermState().getOrCreateNodeCache(DaemonicParserState.TARGET_NODE_CACHE_TYPE),
+        parser.getPermState().getOrCreateNodeCache(DaemonicParserState.RAW_TARGET_NODE_CACHE_TYPE));
   }
 
   @Test
@@ -2249,15 +2355,12 @@ public class ParserWithConfigurableAttributesTest {
     Files.copy(visibilityData.resolve("sub/BUCK.fixture"), visibilitySubBuckFile);
 
     parser.buildTargetGraph(
-        parsingContext,
-        ImmutableSet.of(BuildTargetFactory.newInstance(cellRoot, "//:should_pass")));
+        parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:should_pass")));
     parser.buildTargetGraph(
-        parsingContext,
-        ImmutableSet.of(BuildTargetFactory.newInstance(cellRoot, "//:should_pass2")));
+        parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:should_pass2")));
     try {
       parser.buildTargetGraph(
-          parsingContext,
-          ImmutableSet.of(BuildTargetFactory.newInstance(cellRoot, "//:should_fail")));
+          parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:should_fail")));
       Assert.fail("did not expect to succeed parsing");
     } catch (Exception e) {
       assertThat(e, instanceOf(HumanReadableException.class));
@@ -2292,7 +2395,7 @@ public class ParserWithConfigurableAttributesTest {
 
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2307,7 +2410,7 @@ public class ParserWithConfigurableAttributesTest {
 
     cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2330,7 +2433,7 @@ public class ParserWithConfigurableAttributesTest {
 
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2345,7 +2448,7 @@ public class ParserWithConfigurableAttributesTest {
 
     cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2376,14 +2479,14 @@ public class ParserWithConfigurableAttributesTest {
 
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config = FakeBuckConfig.builder().setFilesystem(filesystem).build();
 
     cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2415,7 +2518,7 @@ public class ParserWithConfigurableAttributesTest {
 
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2431,7 +2534,7 @@ public class ParserWithConfigurableAttributesTest {
 
     cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated.", 1, counter.calls);
@@ -2457,7 +2560,7 @@ public class ParserWithConfigurableAttributesTest {
             .build();
 
     Cell cell = new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build();
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget);
+    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -2480,7 +2583,9 @@ public class ParserWithConfigurableAttributesTest {
 
     TargetNode<?> targetNode =
         parser.getTargetNode(
-            parsingContext.withCell(cell), BuildTargetFactory.newInstance(cellRoot, "//:string"));
+            parsingContext.withCell(cell),
+            BuildTargetFactory.newInstance("//:string"),
+            DependencyStack.root());
     // in Skylark the type of str is "string" and in Python DSL it's "<type 'str'>"
     assertEquals(targetNode.getBuildTarget().getShortName(), "string");
   }
@@ -2492,7 +2597,7 @@ public class ParserWithConfigurableAttributesTest {
                 .withEventBus(eventBus)
                 .withCellProvider(cell.getCellProvider())
                 .build()
-                .getFreshActionGraph(targetGraph))
+                .getFreshActionGraph(TestTargetGraphCreationResultFactory.create(targetGraph)))
         .getActionGraphBuilder();
   }
 
@@ -2508,13 +2613,15 @@ public class ParserWithConfigurableAttributesTest {
       throws BuildFileParseException, IOException, InterruptedException {
     return FluentIterable.from(
             parser
-                .buildTargetGraphWithConfigurationTargets(
+                .buildTargetGraphWithTopLevelConfigurationTargets(
                     parsingContext,
                     ImmutableList.of(
                         ImmutableTargetNodePredicateSpec.of(
                             BuildFileSpec.fromRecursivePath(
-                                Paths.get(""), parsingContext.getCell().getRoot()))),
-                    EmptyTargetConfiguration.INSTANCE)
+                                new ImmutableCellRelativePath(
+                                    parsingContext.getCell().getCanonicalName(),
+                                    ForwardRelativePath.of(""))))),
+                    Optional.empty())
                 .getTargetGraph()
                 .getNodes())
         .transform(TargetNode::getBuildTarget)
@@ -2525,8 +2632,9 @@ public class ParserWithConfigurableAttributesTest {
       Parser parser, BuildTarget... buildTargets) throws Exception {
     // Build the target graph so we can access the hash code cache.
 
-    ImmutableList<BuildTarget> buildTargetsList = ImmutableList.copyOf(buildTargets);
-    TargetGraph targetGraph = parser.buildTargetGraph(parsingContext, buildTargetsList);
+    ImmutableSet<BuildTarget> buildTargetsList = ImmutableSet.copyOf(buildTargets);
+    TargetGraph targetGraph =
+        parser.buildTargetGraph(parsingContext, buildTargetsList).getTargetGraph();
 
     ImmutableMap<BuildTarget, Map<String, Object>> attributes =
         getRawTargetNodes(
@@ -2550,7 +2658,7 @@ public class ParserWithConfigurableAttributesTest {
     return toReturn.build();
   }
 
-  private static ImmutableMap<BuildTarget, Map<String, Object>> getRawTargetNodes(
+  private ImmutableMap<BuildTarget, Map<String, Object>> getRawTargetNodes(
       Parser parser,
       TypeCoercerFactory typeCoercerFactory,
       BuckEventBus eventBus,
@@ -2568,11 +2676,16 @@ public class ParserWithConfigurableAttributesTest {
     buildTargetList.forEach(
         buildTarget ->
             hashes.put(
-                buildTarget.getBasePath().resolve("BUCK"),
-                HashCode.fromBytes(buildTarget.getBaseName().getBytes(StandardCharsets.UTF_8))));
+                buildTarget
+                    .getCellRelativeBasePath()
+                    .getPath()
+                    .toPath(filesystem.getFileSystem())
+                    .resolve("BUCK"),
+                HashCode.fromBytes(
+                    buildTarget.getBaseName().toString().getBytes(StandardCharsets.UTF_8))));
 
     try (PerBuildState state =
-        PerBuildStateFactory.createFactory(
+        new PerBuildStateFactory(
                 typeCoercerFactory,
                 new DefaultConstructorArgMarshaller(typeCoercerFactory),
                 knownRuleTypesProvider,
@@ -2581,17 +2694,18 @@ public class ParserWithConfigurableAttributesTest {
                 eventBus,
                 getManifestSupplier(),
                 new FakeFileHashCache(hashes),
-                new ParsingUnconfiguredBuildTargetFactory())
-            .create(
-                ParsingContext.builder(cell, executor).build(),
-                parser.getPermState(),
-                ImmutableList.of())) {
+                new ParsingUnconfiguredBuildTargetViewFactory(),
+                UnconfiguredTargetConfiguration.INSTANCE)
+            .create(ParsingContext.builder(cell, executor).build(), parser.getPermState())) {
       for (BuildTarget buildTarget : buildTargets) {
         attributesByTarget.put(
             buildTarget,
             Preconditions.checkNotNull(
                 parser.getTargetNodeRawAttributes(
-                    state, cell, parser.getTargetNode(parsingContext, buildTarget))));
+                    state,
+                    cell,
+                    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root()),
+                    DependencyStack.root())));
       }
 
       return attributesByTarget.build();
